<resources>
    <string name="app_name">PFE</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="option_internal_choice_file">Parcourir l\'appareil</string>
    <string name="option_onedrive_choice_file">Récupérer le fichier sur OneDrive</string>
    <string name="title_choice_file">Comment récupérer mon fichier ?</string>
    <string name="cancel_alert_dialog">Annuler</string>
    <string name="label_choosed_file">Fichier choisi pour l\'upload</string>
    <string name="label_status_choosed_file">Statut du fichier : </string>
    <string name="label_status_displayed_photo">Statut de la photo affichée : </string>
    <string name="status_choosed_file_READY">Prêt pour upload</string>
    <string name="status_choosed_file_UPLOADED">Enregistré</string>
    <string name="status_choosed_file_NOT_UPLOADED">Non enregistré</string>
    <string name="status_choosed_file_WAIT_FOR_INTERNET_CONNECTION">Upload en cours (attente connexion internet)</string>
    <string name="download_from_one_drive_offline_impossible">Récupération de fichier depuis OneDrive impossible hors connexion, veuillez rééssayer ultérieurement SVP</string>
    <string name="upload_file_waiting_internet_connection_1">Appareil hors connexion: le fichier</string>
    <string name="upload_file_waiting_internet_connection_2"> sera uploadé dès le rétablissement de la connexion internet</string>
    <string name="tab_other_documents">Autres documents</string>
    <string name="tab_security_documents">Documents de sécurité</string>
    <string name="tab_plan_documents">Plans</string>
    <string name="button_search_file_text">Rechercher...</string>
    <string name="button_upload_file_text">Enregistrer</string>
    <string name="label_uploaded_file">Nom du fichier enregistré :</string>
    <string name="tab_course_access">Accès cheminement</string>
    <string name="tab_general_view_access">Accès vue générale</string>
    <string name="tab_technical_equipments">Equipements techniques</string>
    <string name="tab_malt_adductions">Malt adductions</string>
    <string name="tab_security">Sécurité</string>
    <string name="subtitle_worksite_access">Accès au chantier</string>
    <string name="subtitle_means_of_access">Moyens d\'accès</string>
    <string name="subtitle_air_access">Accès aux aériens</string>
    <string name="subtitle_technical_zone_access">Accès à la zone technique</string>
    <string name="subtitle_RF_modules">Modules RF</string>
    <string name="subtitle_energy">Energie</string>
    <string name="subtitle_transmission">Transmission</string>
    <string name="subtitle_anti_intrusion">Anti intrusion</string>
    <string name="subtitle_anti_fall">Anti chute</string>
    <string name="subtitle_security_perimeter">Périmètre de sécurité</string>
    <string name="subtitle_signaletics">Signalétique</string>
    <string name="subtitle_lights">Lumières</string>
    <string name="subtitle_grounds">Terres</string>
    <string name="subtitle_divers">Divers</string>
    <string name="subtitle_technical_equipments_places">Emplacements des équipements techniques</string>
    <string name="subtitle_divisionary_board">tableau divisionnaire</string>
    <string name="subtitle_courses_divers">Cheminement/divers</string>
    <string name="take_photo_button">Prendre une photo</string>
    <string name="upload_taken_photo_button">Uploader cette photo</string>
    <string name="back_to_camera_button">Reprendre une photo</string>
    <string name="choose_existing_photo_button">Choisir une photo existante</string>

    <string name="yes">OUI</string>
    <string name="no">NON</string>
    <string name="title_local_store_photo_alert_dialog">Conservation de la photo dans l\'appareil</string>
    <string name="message_local_store_photo_alert_dialog">La photo sera sauvegardé dans le dossier \"Pictures\" de la carte SD</string>
    <string name="progress_dialog_photos_retrivement">Récupération des photos</string>
    <string name="label_button_print_courses_access">Générer le document photos ACCES CHEMINEMENT</string>
    <string name="label_button_print_malt_adductions">Générer le document photos MALT ADDUCTIONS</string>
    <string name="label_button_print_security">Générer le document photos SECURITE</string>
    <string name="label_button_print_technical_equipments">Générer le document photos EQUIPEMENT TECHNIQUES</string>
    <string name="label_button_print_general_view">Générer le document photos VUE GENERALE</string>

    <string name="choose">Choisir</string>

    <!-- Strings related to worksite -->
    <string name="worksite_name">Nom du chantier</string>
    <string name="edit_worksite_name">XXX</string>
    <string name="worksite_type">Type du chantier</string>
    <string name="choose_worksite_type">Type</string>
    <string name="worksite_address">Adresse</string>
    <string name="worksite_address_number">Numéro de rue</string>
    <string name="edit_worksite_address_number">12</string>
    <string name="worksite_address_road">Nom de rue</string>
    <string name="edit_worksite_address_road">Rue ....</string>
    <string name="worksite_address_city">Ville</string>
    <string name="edit_worksite_address_city">Abcd</string>
    <string name="worksite_address_code">Code postal</string>
    <string name="edit_worksite_address_code">01234</string>

    <string name="worksite_vic">VIC non renseignée</string>
    <string name="create_worksite">Créer ce chantier</string>
    <string name="manage_worksites">Gérer les chantiers</string>

    <!-- Strings related to people -->
    <string name="personsLastname">Nom</string>
    <string name="personsFirstname">Prénom</string>
    <string name="personsCompany">Entreprise</string>
    <string name="personsRole">Role</string>
    <string name="personsPhone">Numero de téléphone</string>
    <string name="personsEmail">Email</string>
    <string name="firstname">Prénom</string>
    <string name="lastname">Nom de famille</string>
    <string name="phone">Numéro</string>
    <string name="idPeople">ID</string>
    <string name="company">Entreprise</string>
    <string name="role">Rôle</string>
    <string name="editPeople">Modifier</string>
    <string name="create_people">Ajouter un employé</string>

    <string name="create">Créer</string>
    <string name="deselect">Desélectionner</string>
    <string name="select">Selectionner</string>
    <string name="select_people">Choisir des personnes</string>
    <string name="choose_persons">Valider mon choix</string>
    <string name="worksite_people">Personnes</string>
    <string name="date_vic">VIC : </string>
    <string name="save">Sauvegarder</string>
    <string name="generate_pdf">Générer PDF</string>
    <string name="access_docs">Documents</string>
    <string name="access_photos">Photos</string>
    <string name="worksite_list_people">Personnes</string>
    <string name="date_vic_created">01/02/2018</string>


</resources>
