<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_button_print_courses_access"
        android:id="@+id/buttonPrintCoursesAccess" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_button_print_malt_adductions"
        android:id="@+id/buttonPrintMaltAdductions" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_button_print_security"
        android:id="@+id/buttonPrintSecurity" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_button_print_technical_equipments"
        android:id="@+id/buttonPrintTechnicalEquipments" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_button_print_general_view"
        android:id="@+id/buttonPrintGeneralView" />
</LinearLayout>
